Fix sides of collapsed tables cut off.
Switch to inset border style for collapsed tables cleaner nested
table presentation: See "San Francisco" > "Climate" section.
Inset also doesn't break the fixes made in:
	https://gerrit.wikimedia.org/r/#/c/194450/

Better matched collapsed table border style to upstream css table border style.

Hide redundant border - apparent in before/after comparison of the
"San Francisco" > "Climate" section.

--- a/www/less/table.less
+++ b/www/less/table.less
@@ -1,5 +1,6 @@
 .content table.infobox {
 font-size: 100%;
+border-style:none !important;
 }
 
 table.infobox caption {
@@ -12,7 +13,8 @@ width: 100%;
 margin-top: 14px;
 margin-bottom: 14px;
 border-radius: 2px;
-box-shadow: 0 1px 4px 0 rgba(0,0,0,0.12), 0 0 1px 0 rgba(0,0,0,0.18);
+padding:1px;
+box-shadow: inset 0 0 1px gray;
 }
 
 .app_table_collapsed_container {
